// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetWorkspace loadJSON should correctly parse and assign JSON properties 1`] = `
Object {
  "byId": Object {
    "testRoom": Object {
      "description": Object {
        "children": Array [],
        "data": Object {
          "tag": "Description",
        },
      },
      "exits": Array [],
      "key": "testRoom",
      "name": Object {
        "children": Array [],
        "data": Object {
          "tag": "Name",
        },
      },
      "shortName": Object {
        "children": Array [],
        "data": Object {
          "tag": "ShortName",
        },
      },
      "summary": Object {
        "children": Array [],
        "data": Object {
          "tag": "Summary",
        },
      },
      "tag": "Room",
      "themes": Array [],
      "universalKey": "ROOM#001",
    },
  },
  "key": "Test",
  "metaData": Array [],
  "tag": "Asset",
}
`;

exports[`AssetWorkspace loadJSON should correctly parse and assign JSON properties 2`] = `
Array [
  Object {
    "internalKey": "testRoom",
    "universalKey": "ROOM#001",
  },
]
`;

exports[`AssetWorkspace setWML should correctly parse WML input 1`] = `
Object {
  "byId": Object {
    "a123": Object {
      "description": Object {
        "children": Array [],
        "data": Object {
          "tag": "Description",
        },
      },
      "exits": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "welcome",
              },
            },
          ],
          "data": Object {
            "from": "a123",
            "key": "a123#b456",
            "tag": "Exit",
            "to": "b456",
          },
        },
      ],
      "key": "a123",
      "name": Object {
        "children": Array [],
        "data": Object {
          "tag": "Name",
        },
      },
      "shortName": Object {
        "children": Array [],
        "data": Object {
          "tag": "ShortName",
        },
      },
      "summary": Object {
        "children": Array [],
        "data": Object {
          "tag": "Summary",
        },
      },
      "tag": "Room",
      "themes": Array [],
    },
    "b456": Object {
      "description": Object {
        "children": Array [],
        "data": Object {
          "tag": "Description",
        },
      },
      "exits": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "vortex",
              },
            },
          ],
          "data": Object {
            "from": "b456",
            "key": "b456#a123",
            "tag": "Exit",
            "to": "a123",
          },
        },
      ],
      "key": "b456",
      "name": Object {
        "children": Array [],
        "data": Object {
          "tag": "Name",
        },
      },
      "shortName": Object {
        "children": Array [],
        "data": Object {
          "tag": "ShortName",
        },
      },
      "summary": Object {
        "children": Array [],
        "data": Object {
          "tag": "Summary",
        },
      },
      "tag": "Room",
      "themes": Array [],
    },
  },
  "key": "Test",
  "metaData": Array [],
  "tag": "Asset",
}
`;

exports[`AssetWorkspace setWML should correctly parse WML input 2`] = `
Array [
  Object {
    "internalKey": "a123",
    "universalKey": "TestA",
  },
  Object {
    "internalKey": "b456",
    "universalKey": "ROOM#UUID-7",
  },
]
`;

exports[`AssetWorkspace setWML should look up import namespace mappings 1`] = `
Array [
  Object {
    "internalKey": "b456",
    "universalKey": "TestB",
  },
  Object {
    "internalKey": "a123",
    "universalKey": "testImport",
  },
  Object {
    "internalKey": "c789",
    "universalKey": "testFeature",
  },
]
`;

exports[`AssetWorkspace setWML should populate export namespace mappings 1`] = `
Array [
  Object {
    "exportAs": "Room2",
    "internalKey": "a123",
    "universalKey": "ROOM#UUID-9",
  },
  Object {
    "internalKey": "b456",
    "universalKey": "ROOM#UUID-10",
  },
]
`;
